--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.sql.init.schema-locations=classpath:schema-hsqldb.sql
 spring.sql.init.data-locations=classpath:data-hsqldb.sql
 
 logging.level.org.hibernate.SQL=debug
+
+# graceful shutdown: stop accepting new requests, give a change to complete ongoing requests
+server.shutdown=graceful
